--- a/webservice/templates/view_picker.html
+++ b/webservice/templates/view_picker.html
@@ -8,11 +8,11 @@
             {% if has_active|default(False) %}
             <div class="column">
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_active" id="view_active" value="view_active" {{ 'checked="checked"' if (data.view_active is not defined or data.view_active == "view_active")  }}>
+                <input type="checkbox" name="view_active" id="view_active" value="view_active" {{ 'checked' if (data.view_active is not defined or data.view_active == "view_active") }}>
                 <label>Active</label>
                 </div><br/>
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_inactive" id="view_inactive" value="view_inactive" {{ 'checked="checked"' if (data.view_inactive is not defined or data.view_inactive == "view_inactive")  }}>
+                <input type="checkbox" name="view_inactive" id="view_inactive" value="view_inactive" {{ 'checked' if (data.view_inactive is not defined or data.view_inactive == "view_inactive") }}>
                 <label>Inactive</label>
                 </div>
             </div>
@@ -20,22 +20,22 @@
 
             <div class="column">
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_mine" id="view_mine" value="{{current_experimenter.experimenter_id}}" {{ 'checked="checked"' if (data.view_mine is not defined or data.view_mine|string == current_experimenter.experimenter_id|string)  }}>
+                <input type="checkbox" name="view_mine" id="view_mine" value="{{current_experimenter.experimenter_id}}" {{ 'checked' if (data.view_mine is not defined or data.view_mine|string == current_experimenter.experimenter_id|string) }}>
                 <label>Mine</label>
                 </div><br/>
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_others" id="view_others" value="{{current_experimenter.experimenter_id}}" {{ 'checked="checked"' if (data.view_others is not defined or data.view_others|string == current_experimenter.experimenter_id|string )  }}>
+                <input type="checkbox" name="view_others" id="view_others" value="{{current_experimenter.experimenter_id}}" {{ 'checked' if (data.view_others is not defined or data.view_others|string == current_experimenter.experimenter_id|string ) }}>
                 <label>Others</label>
                 </div>
             </div>
 
             <div class="column">
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_analysis" id="view_analysis" value="view_analysis" {{ 'checked="checked"' if (data.view_analysis is not defined or data.view_analysis == "view_analysis")  }}>
+                <input type="checkbox" name="view_analysis" id="view_analysis" value="view_analysis" {{ 'checked' if (data.view_analysis is not defined or data.view_analysis == "view_analysis") }}>
                 <label>Analysis</label>
                 </div><br/>
                 <div class="ui checkbox">
-                <input type="checkbox" name="view_production" id="view_production" value="view_production" {{ 'checked="checked"' if (data.view_production is not defined or data.view_production == "view_production")  }}>
+                <input type="checkbox" name="view_production" id="view_production" value="view_production" {{ 'checked' if (data.view_production is not defined or data.view_production == "view_production") }}>
                 <label>Production</label>
                 </div>
             </div>
