--- a/webservice/templates/submission_details.html
+++ b/webservice/templates/submission_details.html
@@ -88,7 +88,7 @@ View the <a href="http://samweb.fnal.gov:8480/station_monitor/{{experiment}}/sta
 {%endif%}
 
 {%if submission.jobsub_job_id %}
-View the <a href="https://{{schedd}}:8443/jobsub/acctgroups/{{experiment|replace('samdev','fermilab')}}/sandboxes/{{"%spro"|format(experiment)|replace("samdevpro","mengel")}}/{{submission.jobsub_job_id|replace("@",".0@")}}/">Job Logs</a> <br>
+View the <a href="https://{{schedd}}:8443/jobsub/acctgroups/{{experiment|replace('samdev','fermilab')}}/sandboxes/{{"%spro"|format(experiment)|replace("samdevpro","mengel")}}/{{submission.jobsub_job_id|replace("@",".0@")|replace(".0.0@",".0@")}}/">Job Logs</a> <br>
 {%endif%}
 
 </div>
