Adding changes for new campaign stage status form.

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -61,8 +61,8 @@ in Campaign {{CampaignStage.campaign_obj.name}}
               </div>
 
               <div class=item>
-              <a href="{{pomspath}}/campaign_time_bars?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
-                <i class="external submissions icon" data-content="Submissions for CampaignStage Time Bars (1wk)" data-variation="basic"></i>Submission Time Bars (1wk)
+              <a href="{{pomspath}}/campaign_stage_submissions?campaign_name={{CampaignStage.campaign_obj.name}}&stage_name={{CampaignStage.name}}&campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
+                <i class="external submissions icon" data-content="Campaign Stage Submissins (1wk)" data-variation="basic"></i>Campaign Stage Submissions (1wk)
               </a>
               </div>
               <div class=item>
