file upload/download

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -44,6 +44,14 @@
   </div>
 
   <div class="item">
+    <div class="header">User Data</div>
+    <div class="menu">
+      <a class="item" href="{{pomspath}}/file_uploads">
+        Uploaded Files
+      </a>
+     </div>
+  </div>
+  <div class="item">
     <div class="header">Campaign Data</div>
     <div class="menu">
       <a class="item" href="{{pomspath}}/show_campaigns">
