--- a/webservice/templates/campaign_stage_submissions.html
+++ b/webservice/templates/campaign_stage_submissions.html
@@ -33,7 +33,7 @@ Campaign Stage:&nbsp;&nbsp;&nbsp; {{data.campaign_name}}
                 <th>Submission Id</th>
                 <th>Jobsub Id</th>
                 <th>Commands</th>
-                <th>Status (History/Current</th>
+                <th>Status (History/Current)</th>
                 <th>Submitted</th>
                 <th>Submitter</th>
             </tr>
@@ -41,27 +41,33 @@ Campaign Stage:&nbsp;&nbsp;&nbsp; {{data.campaign_name}}
         <tbody>
         {% for rec in data.submissions %}
         <tr>
-            <td>{{rec.Submission.submission_id}}</td>
-            <td>{{rec.Submission.jobsub_job_id if rec.Submission.jobsub_job_id}}</td>
+            <td>{{rec.submission_id}}</td>
             <td>
-                {% if rec.Submission.jobsub_job_id is not none %}
-                    {% if rec.SubmissionStatus.status not in ('Completed', 'Located', 'Failed', 'Removed') %}
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.Submission.submission_id}}&act=hold" alt="Hold"><i class="ui pause icon"></i></a>&nbsp;&nbsp;
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.Submission.submission_id}}&act=release" alt="Release"><i class="ui play icon"></i></a>&nbsp;&NonBreakingSpace;
-                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.Submission.submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
+                {% if rec.jobsub_job_id is not none %}
+                <a href="https://fifemon.fnal.gov/monitor/d/000000188/dag-cluster-summary?var-cluster={{rec.jobsub_cluster}}&var-schedd={{rec.jobsub_schedd}}&from={{data.tminsec}}000&to=now&refresh=3m&orgId=1" target='_blank'>
+                    {{rec.jobsub_job_id}}
+                </a>
+                {% endif %}
+            </td>
+            <td>
+                {% if rec.jobsub_job_id is not none %}
+                    {% if rec.status in ('New', 'Idle', 'Running', 'Held') %}
+                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=hold" alt="Hold"><i class="ui pause icon"></i></a>&nbsp;&nbsp;
+                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=release" alt="Release"><i class="ui play icon"></i></a>&nbsp;&nbsp;
+                    <a href="{{pomspath}}/kill_jobs?submission_id={{rec.submission_id}}&act=kill" alt="Kill"><i class="ui trash icon"></i></a>
                     {% endif %}
-                    {% if rec.SubmissionStatus.status == 'Completed' %}
-                    <a href="{{pomspath}}/force_locate_submission?submission_id={{rec.Submission.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
+                    {% if rec.status == 'Completed' %}
+                    <a href="{{pomspath}}/force_locate_submission?submission_id={{rec.submission_id}}" alt="Skip ahead to Located"><i class="ui forward icon"></i></a>
                     {% endif %}
                 {% endif %}
             </td>
             <td>
-                <button class="teal tiny ui button" onclick="get_status_history({{rec.Submission.submission_id}}, {{rec.jobsub_job_id}})">
+                <button class="teal tiny ui button" onclick="get_status_history({{rec.submission_id}}, {{rec.jobsub_job_id}})">
                         <i class="history icon"></i>
                 </button>
-                {{rec.SubmissionStatus.status}}</td>
-            <td>{{rec.Submission.created}}</td>
-            <td>{{rec.Submission.experimenter_creator_obj.username}}</td>
+                {{rec.status}}</td>
+            <td>{{rec.created}}</td>
+            <td>{{rec.creator}}</td>
         </tr>
         {% endfor %}
         </tbody>
@@ -102,13 +108,6 @@ Campaign Stage:&nbsp;&nbsp;&nbsp; {{data.campaign_name}}
 
 
     function get_status_history(submission_id, jobsub_job_id) {
-    /**
-    alert(submission_id);
-    <tr>
-    <td>rec.SubmissionStatus.status</td>
-    <td>rec.SubmissionHistory.created</td>
-    </tr>
-    **/
         formdata = {"submission_id": submission_id}
         var trows = " ";
         $.ajax({
