--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -22,20 +22,18 @@ Confirm {{act}} request {%include 'help_button.html'%}
 
    Are you sure you want to {{act}} the jobs for
      {% if campaign_stage_id is not none %}
-        Campaign Stage {{cs.name if cs}}, Submission(s) {{jjil|join(', ')}}
+        Campaign Stage {{cs.name if cs}}, Submission(s) {{what}}
      {% elif submission_id is not none %}
-       Submissions(s) {{jjil|join(', ')}}
-     {% elif job_id is not none %}
-       Job(s) {{jjil|join(', ')}}
+       Submissions(s) {{what}}
      {% endif %}
     ? <br>
   <a href=
+     {% if campaign_id is not none %}
+     "{{pomspath}}/kill_jobs?confirm=y&campaign_id={{campaign_id}}&act={{act}}"
      {% if campaign_stage_id is not none %}
      "{{pomspath}}/kill_jobs?confirm=y&campaign_stage_id={{campaign_stage_id}}&act={{act}}"
      {% elif submission_id is not none %}
        "{{pomspath}}/kill_jobs?confirm=y&submission_id={{submission_id}}&act={{act}}"
-     {% elif job_id is not none %}
-       "{{pomspath}}/kill_jobs?confirm=y&job_id={{job_id}}&act={{act}}"
      {% endif %}
    >
       <button class="ui button">
