--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -133,11 +133,16 @@ Login/Setup {{ show_hint('', 'Help page') }}
       </div>
       <div class="field">
         <label>Host {{ show_hint('#Host', 'Host name') }}</label>
-        <input type="text" id="ae_launch_host" name="ae_launch_host" placeholder="Launch Host">
+        <input type="text" id="ae_launch_host" name="ae_launch_host" placeholder="Launch Host" 
+            {{ 'value="{{hostname}}" disabled' if (session_role=='analysis') }}
+         >
       </div>
       <div class="field">
         <label>Account {{ show_hint('#Account', 'Account name') }}</label>
-        <input type="text" id="ae_launch_account" name="ae_launch_account" placeholder="Launch Account">
+        <input type="text" id="ae_launch_account" name="ae_launch_account" placeholder="Launch Account"
+
+            {{ 'value="poms_launcher" disabled' if (session_role=='analysis') }}
+        >
       </div>
     </div>
     <div class="one field">
