--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -21,18 +21,18 @@ Confirm {{act}} request {%include 'help_button.html'%}
 <div class="ui raised padded text container segment">
 
    Are you sure you want to {{act}} the jobs for
-     {% if campaign_stage_id is not none %}
+     {% if campaign_stage_id %}
         Campaign Stage {{cs.name if cs}}, Submission(s) {{what}}
-     {% elif submission_id is not none %}
+     {% elif submission_id %}
        Submissions(s) {{what}}
      {% endif %}
     ? <br>
   <a href=
-     {% if campaign_id is not none %}
+     {% if campaign_id %}
      "{{pomspath}}/kill_jobs?confirm=y&campaign_id={{campaign_id}}&act={{act}}"
-     {% if campaign_stage_id is not none %}
+     {% elif campaign_stage_id %}
      "{{pomspath}}/kill_jobs?confirm=y&campaign_stage_id={{campaign_stage_id}}&act={{act}}"
-     {% elif submission_id is not none %}
+     {% elif submission_id %}
        "{{pomspath}}/kill_jobs?confirm=y&submission_id={{submission_id}}&act={{act}}"
      {% endif %}
    >
