wrong updater name

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -205,7 +205,7 @@ in Campaign {{CampaignStage.campaign_obj.name}}
     <b>Created</b>: {{CampaignStage.created}}<br>
     <b>Creator</b>: {{Campaign_info.Experimenter.username}}<br>
     <b>Updated</b>: {{CampaignStage.updated}}<br>
-    <b>Updater</b>: {{Campaign_info.Experimenter.username}}<br>
+    <b>Updater</b>: {{CampaignStage.experimenter_updater_obj.username}}<br>
     </div>
 
 
