--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -5,6 +5,9 @@
     {%if do_refresh %}
     <meta http-equiv="refresh" content="{{do_refresh}}" />
     {% endif %}
+    <!-- Google keeps offering to translate the campaign_stage_info page now... -->
+    <meta name="google" content="notranslate">
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
