ask google not to translate the pages... differently

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -16,6 +16,11 @@ in Campaign {{CampaignStage.campaign_obj.name}}<span class="ui label">{{Campaign
 
 
 {%block content%}
+<!-- 
+This page is really in English, and hopefully a brief note to that effect
+here in the comments will keep Google Chrome from offering to translate it
+all the time...
+-->
 
 <style>
 .ui.search .prompt{border-radius:0.28571429rem}
